samples/_failures_safe/1761312332_4bd6bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c960ea9.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_9c960ea9.c:131:9: error: expected declaration or statement at end of input
  131 |         int u = minNode->vertex;
      |         ^~~
./samples/SAFE/__tmp_9c960ea9.c:131:9: error: expected declaration or statement at end of input
